# learn-the-language

./: LICENSE  README.md  pyproject.toml
learn_the_language/: __init__.py  azure_translator.py  cli.py  suite_builder.py  suites.py  trainer.py
tests/: test_azure_translator.py  test_suite_builder.py  test_suites.py  test_trainer.py
vocabulary/fr/: basics.txt
vocabulary/nl/: basics.txt
